--- a/lojadediscos/src/main/resources/application.properties
+++ b/lojadediscos/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.username = postgres
 spring.datasource.password = 123
 spring.datasource.driver-class-name = org.postgresql.Driver
 
+server.servlet.session.timeout=1m
+
 
 
 
